--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body{
   background-color: #e9ecef;
 }
@@ -240,4 +244,7 @@ div#calendario.featurette{
 }
 .eventos-relacionados{
   width: 15%;
+}
+a {
+  color: #788b91;
 }
